txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -162,6 +162,7 @@ It reduces to normal expected value in conditional probability if we consider th
         \begin{equation*}
             X_t^{s,x} = x + \int_s^t (b(r,X_r^{s,x}) dr + \int_s^t \sigma(s,X_s^{s,x}) dB_s.
         \end{equation*}
+        This is just the same SDE as above but with the additional inclusion of $s$.
         Even if the process does not start from $0$, this is not a problem. We just specify that $x$ is the spatial starting point and $s$ is the starting time. \\
         The previous SDE has unique solution
         \begin{equation*}
@@ -171,8 +172,9 @@ It reduces to normal expected value in conditional probability if we consider th
         \begin{equation*}
             X_t^{0,\xi} = \xi + \int_0^t b(r,X_r^{0,\xi}) dr + \int_0^t b(r,X_r^{0,\xi})dB_r
         \end{equation*}
+        so
         \begin{equation*}
-            FINIRE DI COPIARE (foto Agnese)
+            X_t^{0,\xi}
         \end{equation*}
         The two assertions (equation e UNIQUENESS) have the following consequence:
         \begin{equation*}
