--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -174,7 +174,11 @@ It reduces to normal expected value in conditional probability if we consider th
         \end{equation*}
         so
         \begin{equation*}
-            X_t^{0,\xi}=X_n^{0,\xi}+\int_s^tb(r,X^{0,\xi}_r)\dif r+\int_{s}^{t}\sigma(r,X_r^{0,\xi})\dif B_r
+            X_t^{0,\xi}=X_n^{0,\xi}+\int_s^tb(r,X^{0,\xi}_r)\dif r+\int_{s}^{t}\sigma(r,X_r^{0,\xi})\dif B_r.
+        \end{equation*}
+        Now we use the uniqueness of the solution to get
+        \begin{equation*}
+        	X_t^{0,\xi}=X_t^{0,X_s^{0,\xi}}\qquad \text{a.s. }t\geq s
         \end{equation*}
         The two assertions (equation e UNIQUENESS) have the following consequence:
         \begin{equation*}
