--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -180,7 +180,7 @@ It reduces to normal expected value in conditional probability if we consider th
         \begin{equation*}
         	X_t^{0,\xi}=X_t^{0,X_s^{0,\xi}}\qquad \text{a.s. }t\geq s.
         \end{equation*}
-        Here the initial condition is in itself a random variable. Normally this should make us very uncomfortable, but 
+        Here the initial condition is in itself a random variable. Normally this should make us very uncomfortable, but for some reason Daddy Toaldo told us not to fret.
         The two assertions (equation e UNIQUENESS) have the following consequence:
         \begin{equation*}
             X_t^{0,\xi} = \Phi(X_s^{0,\xi}, s, t, \omega)
