txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -199,7 +199,7 @@ It reduces to normal expected value in conditional probability if we consider th
         %FROZEN con sguardo spaventato e mani in alto
 		Now take the following expectation for a function $u\in\mathcal{B}_b(\R)$:
 		\begin{align}
-			\ev\left[u(X_t^{0,\xi})|\F_s\right]
+			&\ev\left[u(X_t^{0,\xi})|\F_s\right]\\
 		\end{align}
         We need to state a lemma, which is equivalent to the Freezing Lemma
         \begin{PropBox}
