--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -198,9 +198,9 @@ It reduces to normal expected value in conditional probability if we consider th
         %mi sono già rotta le palle 
         %FROZEN con sguardo spaventato e mani in alto
 		Now take the following expectation for a function $u\in\mathcal{B}_b(\R)$:
-		\begin{align}
+		\begin{align*}
 			&\ev\left[u(X_t^{0,\xi})|\F_s\right]\\
-		\end{align}
+		\end{align*}
         We need to state a lemma, which is equivalent to the Freezing Lemma
         \begin{PropBox}
             \begin{Lemma}[Lemma A3 page 363, Schilling BM]
