txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -200,7 +200,7 @@ It reduces to normal expected value in conditional probability if we consider th
 		Now take the following expectation for a function $u\in\mathcal{B}_b(\R)$:
 		\begin{align*}
 			&\ev{u(X_t^{0,\xi})|\mathcal{F}_s}\\
-			=&\ev{u\left(\Phi\left(X_s^{0,\xi},s,t,\cdot\right)\right)\middle|\mathcal{F}_s}
+			=&\ev{u\left(\Phi\left(X_s^{0,\xi},s,t,\cdot\right)\right)\mathcal{F}_s}
 		\end{align*}
         We need to state a lemma, which is equivalent to the Freezing Lemma
         \begin{PropBox}
