--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -202,13 +202,13 @@ It reduces to normal expected value in conditional probability if we consider th
 			&\ev{u(X_t^{0,\xi})|\mathcal{F}_s}\\
 			=&\ev{u\left(\Phi\left(X_s^{0,\xi},s,t,\cdot\right)\right)\Big|\mathcal{F}_s}.
 		\end{align*}
-		Notice how we used ad $\cdot$ instead of $\omega$ because inside the expectation we effectively sum all the distribution mass up to $\omega$.
-        We need to state a lemma, which is equivalent to the Freezing Lemma
+		Notice how we used ad $\cdot$ instead of $\omega$ because inside the expectation we effectively sum all the distribution mass up to $\omega$. We now
+		need to state a lemma, which is equivalent to the Freezing Lemma (but it ise more u)
         \begin{PropBox}
-            \begin{Lemma}[Lemma A3 page 363, Schilling BM]
-                
+            \begin{Lemma}[Lemma A3 page 363, Schilling BM] 
             \end{Lemma}
         \end{PropBox}
+        
         We cannot remove the condition because of the presence of $X_s$ which depends on $\omega$ too!
         Since it is measurable (completely determined by the filtration), we can freeze it since it is a number, and move on with the proof. \\
         The dot in the third line stands for the function which acts to the last components and does not care about the first one (now called y) since the latter has been frozen. \\
