txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -210,7 +210,7 @@ It reduces to normal expected value in conditional probability if we consider th
         \end{PropBox}
         The basically tells us that 
         \begin{equation*}
-        	\ev{u\left(\Phi\left(X_s^{0,\xi},s,t,\cdot\right)\right)\Big|\mathcal{F}_s}=\ev{u\left(\Phi(y,s,t,\cdot)\right)}\Bigg|_{y=X_s^{0,\xi}}
+        	\ev{u\left(\Phi\left(X_s^{0,\xi},s,t,\cdot\right)\right)\Big|\mathcal{F}_s}=\ev{u\left(\Phi(y,s,t,\cdot)\right)}\Big|_{y=X_s^{0,\xi}}
         \end{equation*}
         We cannot remove the condition because of the presence of $X_s$ which depends on $\omega$ too!
         Since it is measurable (completely determined by the filtration), we can freeze it since it is a number, and move on with the proof. \\
