--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -212,6 +212,7 @@ It reduces to normal expected value in conditional probability if we consider th
         \begin{equation*}
         	\ev{u\left(\Phi\left(X_s^{0,\xi},s,t,\cdot\right)\right)\Big|\mathcal{F}_s}=\ev{u\left(\Phi(y,s,t,\cdot)\right)}\Big|_{y=X_s^{0,\xi}}
         \end{equation*}
+        If we take the mapping $\omega\mapsto\Phi(y,s,t,\omega)$
         We cannot remove the condition because of the presence of $X_s$ which depends on $\omega$ too!
         Since it is measurable (completely determined by the filtration), we can freeze it since it is a number, and move on with the proof. \\
         The dot in the third line stands for the function which acts to the last components and does not care about the first one (now called y) since the latter has been frozen. \\
