--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -215,7 +215,10 @@ It reduces to normal expected value in conditional probability if we consider th
         If we take the mapping $\omega\mapsto\Phi(y,s,t,\omega)$ then we know that it is $\mathcal{G}$-measurable. But if we look at the expectation then the dependence from $\omega$ has nothing to do with $\mathcal{F}_s$. $X_s^{0,\xi}$, on the other hand, \textit{is} dependent from $\mathcal{F}_t$.
         Since it is measurable (completely determined by the filtration), we can "freeze" it since it is a number, get an unconditioned expectation and move on with the proof. \\
         The dot in the third line stands for the function which acts to the last components and does not care about the first one (now called $y$) since the latter has been frozen. \\
-        So now we can compute the expectation first 
+        So now we can compute the expectation first using $y$ as a simple number and only after we plug in the random variable $X_s^{0,\xi}$ (which, remember, is the starting point). Now we get
+        \begin{equation*}
+        	\ev{u\left(X_t^{s,y}|_{y=X_s^{0,\xi}}\right)}.
+        \end{equation*}
     \end{proof}
 \end{ProofBox}
 Consider the family of measures, depending on $t,s$ and $x$ for $t \geq s$
