txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -222,7 +222,7 @@ It reduces to normal expected value in conditional probability if we consider th
         This is not exactly the Markov statement, but we can get it nevertheless. Take
         \begin{align*}
         	\ev{\ev{u\left(X_t^{0,\xi}\right)|\mathcal{F}_s}|X_s^{0,\xi}}&=\ev{u\left(X_t^{0,\xi}|X_s^{0,\xi}\right)}\\
-        	&=
+        	&=\ev{arg1}
         \end{align*}
     \end{proof}
 \end{ProofBox}
