--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -222,8 +222,13 @@ It reduces to normal expected value in conditional probability if we consider th
         This is not exactly the Markov statement, but we can get it nevertheless. Take
         \begin{align*}
         	\ev{\ev{u\left(X_t^{0,\xi}\right)|\mathcal{F}_s}|X_s^{0,\xi}}&=\ev{u\left(X_t^{0,\xi}|X_s^{0,\xi}\right)}\\
-        	&=\ev{arg1}
+        	&=\ev{u\left(X_t^{s,y}\right)}\Big|_{y=X_s^{0,\xi}}\\
+        	&=\ev{u(X_t^{0,\xi})|\mathcal{F}_s}
         \end{align*}
+        o that we proved
+        \begin{equation*}
+        	\ev{u(X_t^{0,\xi})|\mathcal{F}_s}=
+        \end{equation*}
     \end{proof}
 \end{ProofBox}
 Consider the family of measures, depending on $t,s$ and $x$ for $t \geq s$
