txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -227,7 +227,7 @@ It reduces to normal expected value in conditional probability if we consider th
         \end{align*}
         o that we proved
         \begin{equation*}
-        	\ev{u(X_t^{0,\xi})|\mathcal{F}_s}=\ev{u\left(X_t^{0,\xi}|X_s^{0,\xi}\right)}
+        	\ev{u(X_t^{0,\xi})|\mathcal{F}_s}=\ev{u\left(X_t^{0,\xi}|X_s^{0,\xi}\right)}.
         \end{equation*}
     \end{proof}
 \end{ProofBox}
@@ -242,5 +242,9 @@ These are called \textbf{transition probabilities of the Markov process} $(X_t)_
     \end{Cor}
 \end{PropBox}
 FOTO ELENA \\
-PICTURE\\
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\linewidth]{screenshot001}
+\end{figure}
+
 
