txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -241,7 +241,10 @@ These are called \textbf{transition probabilities of the Markov process} $(X_t)_
         If the coefficients of the SDE ($b,\sigma$) do not depend on time, then the solution (unique) is an homogeneous Markov process. 
     \end{Cor}
 \end{PropBox}
-
+If we take
+\begin{equation*}
+	eqn
+\end{equation*}
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\linewidth]{screenshot001}
