txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -243,6 +243,10 @@ These are called \textbf{transition probabilities of the Markov process} $(X_t)_
 \end{PropBox}
 If we take
 \begin{equation*}
+	\dif X_t=b(X_t)\dif t+\sigma(X_t)\dif B_t
+\end{equation*}
+as long as $b$ and $\sigma$ are Lipschitz continuous then $X_t$ is a homogeneous-time Markov process such that
+\begin{equation*}
 	eqn
 \end{equation*}
 \begin{figure}[H]
