txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -247,7 +247,7 @@ If we take
 \end{equation*}
 as long as $b$ and $\sigma$ are Lipschitz continuous then $X_t$ is a homogeneous-time Markov process such that
 \begin{equation*}
-	eqn
+		\ev{u(X_t^{0,\xi})|\mathcal{F}_s}=\ev{u\left(X_t^{0,\xi}|X_s^{0,\xi}\right)}.
 \end{equation*}
 \begin{figure}[H]
 	\centering
