txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -249,6 +249,7 @@ as long as $b$ and $\sigma$ are Lipschitz continuous then $X_t$ is a homogeneous
 \begin{equation*}
 		\ev{u(X_t^{0,\xi})|\mathcal{F}_s}=\ev{u\left(X_t^{0,\xi}|X_s^{0,\xi}\right)}.
 \end{equation*}
+This means that we can ``translate'' the path:
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.7\linewidth]{screenshot001}
