txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -254,5 +254,9 @@ This means that we can ``translate'' the path:
 	\centering
 	\includegraphics[width=0.7\linewidth]{screenshot001}
 \end{figure}
+Moreover, this means that
+\begin{equation*}
+	\ev
+\end{equation*}
 
 
