txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -255,8 +255,8 @@ This means that we can ``translate'' the path:
 	\includegraphics[width=0.7\linewidth]{screenshot001}
 \end{figure}
 Moreover, this means that
-\begin{equation*}
-	\ev
-\end{equation*}
+\begin{align*}
+	\ev{u(X_t)|}
+\end{align*}
 
 
