--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -256,7 +256,8 @@ This means that we can ``translate'' the path:
 \end{figure}
 Moreover, this means that
 \begin{align*}
-	\ev{u(X_t)|}
+	\ev{u(X_t)|\mathcal{F}_s}&=\ev{u(X_t)|X)s}\\
+	&=\mE^{X_s}\left[X_{t-2}\right]:=\mE^{x}\left[u(X_{t-2})\right]\big|_{x=X_{s}}
 \end{align*}
 
 
