txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -260,5 +260,8 @@ Moreover, this means that
 	&=\mE^{X_s}\left[X_{t-s}\right]\\
 	:&=\mE^{x}\left[u(X_{t-s})\right]\big|_{x=X_{s}}.
 \end{align*}
-
+The $x$ over the expectation is just a starting point. Since different $x$ causes different measures, this is a family of measures. We can write
+\begin{align*}
+	\ev{u(X_{t})|X_s}&=\int u(y)
+\end{align*}
 
