--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -262,6 +262,6 @@ Moreover, this means that
 \end{align*}
 The $x$ over the expectation is just a starting point. Since different $x$ causes different measures, this is a family of measures. We can write
 \begin{align*}
-	\ev{u(X_{t})|X_s}&=\int u(y)\cdot p(s,x;t,\dif y)\Big|_{x=X_s}
+	\ev{u(X_{t})|X_s}&=\int \underbracket{u(y)\cdot p(s,x;t,\dif y)}_{\text{because of time homoge}}\Big|_{x=X_s}
 \end{align*}
 
