--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -262,6 +262,7 @@ Moreover, this means that
 \end{align*}
 The $x$ over the expectation is just a starting point. Since different $x$ causes different measures, this is a family of measures. We can write
 \begin{align*}
-	\ev{u(X_{t})|X_s}&=\int \underbracket{u(y)\cdot p(s,x;t,\dif y)}_{\mathclap{\text{\tiny because of time homogeneity}}}\Big|_{x=X_s}
+	\ev{u(X_{t})|X_s}&=\int \underbracket{u(y)\cdot p(s,x;t,\dif y)}_{\mathclap{\text{\tiny because of time homogeneity}}}\Big|_{x=X_s}\\
+	&=\underbracket{\int u(y)\cdot p(0,x;t-s,\dif y)\Big|_{x=X_s}}_{\mathclap{\text{Kolmogorov measure at time }0}}
 \end{align*}
 
