--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -264,7 +264,7 @@ The $x$ over the expectation is just a starting point. Since different $x$ cause
 \begin{align*}
 	\ev{u(X_{t})|X_s}&=\int \underbracket{u(y)\cdot p(s,x;t,\dif y)}_{\mathclap{\text{\tiny because of time homogeneity}}}\Big|_{x=X_s}\\
 	&=\underbracket{\int u(y)\cdot p(0,x;t-s,\dif y)\Big|_{x=X_s}}_{\mathclap{\text{Kolmogorov measure at time }0}}\\
-	&=\mE^{x}\left[u(X_{t-2})\right]\big|_{x=X_s}\\
-	&=\mE^{X_{s}}\left[u(X_{t-s})\right]
+	&=\mE^{x}\left[u(X_{t-s})\right]\big|_{x=X_s}\\
+	&=\mE^{X_{s}}\left[u(X_{t-s})\right].
 \end{align*}
 
