txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -267,4 +267,5 @@ The $x$ over the expectation is just a starting point. Since different $x$ cause
 	&=\mE^{x}\left[u(X_{t-s})\right]\big|_{x=X_s}\\
 	&=\mE^{X_{s}}\left[u(X_{t-s})\right].
 \end{align*}
+Now let $\alpha>0$ and $\sigma\in\R$.
 
