txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -270,7 +270,8 @@ The $x$ over the expectation is just a starting point. Since different $x$ cause
 Now let $\alpha>0$ and $\sigma\in\R$. The Langevin equation is written as
 \begin{equation*}
 	\begin{cases}
-		\dif X_{t}=-\alpha X_t\dif t+\sigma \dif B_{t}
+		\dif X_{t}=-\alpha X_t\dif t+\sigma \dif B_{t}\\
+		X_0=x
 	\end{cases}
 \end{equation*}
 
