txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -271,7 +271,11 @@ Now let $\alpha>0$ and $\sigma\in\R$. The Langevin equation is written as
 \begin{equation*}
 	\begin{cases}
 		\dif X_{t}=-\alpha X_t\dif t+\sigma \dif B_{t}\\
-		X_0=x
+		X_0=x.
 	\end{cases}
+\end{equation*}
+We want to solve this. Let
+\begin{equation*}
+	X_t=x
 \end{equation*}
 
