--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -276,6 +276,6 @@ Now let $\alpha>0$ and $\sigma\in\R$. The Langevin equation is written as
 \end{equation*}
 We want to solve this. Let
 \begin{equation*}
-	X_t=x
+	X_t=xe^{-\alpha t}+\sigma\int_0^te^{-\alpha t}e^{\alpha s}\dif B_{s}
 \end{equation*}
 
