txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -278,5 +278,8 @@ We want to solve this. Let
 \begin{equation*}
 	X_t=xe^{-\alpha t}+\sigma\int_0^te^{-\alpha t}e^{\alpha s}\dif B_{s}.
 \end{equation*}
-This is also known as the 
+This is also known as the \textbf{Ornstein-Uhleibeck process}. We can write
+\begin{equation*}
+	\underbracket[0.6pt]{e^{\alpha t}X_{t}}_{\mathclap{\text{call this $Y$}}}-x=\sigma\int_0^te^{\alpha s}\dif B_{s}.
+\end{equation*}
 
