txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -282,5 +282,5 @@ This is also known as the \textbf{Ornstein-Uhleibeck process}. We can write
 \begin{equation*}
 	\underbracket[0.6pt]{e^{\alpha t}X_{t}}_{\mathclap{\text{call this $Y$}}}-x=\sigma\int_0^te^{\alpha s}\dif B_{s}.
 \end{equation*}
-$Y$ in this case is an Ito process with drift $0$ and diffusion coefficient $\sigma e^{\alpha s}$. Now consider
+$Y$ in this case is an Ito process with drift $0$ and diffusion coefficient $\sigma e^{\alpha s}$. Now consider the following form
 
