txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -322,3 +322,7 @@ Huh? I am not sure, but anyways. Apply Ito formula (remember: our drift is 0 eve
 \begin{equation*}
     \dif Y_t=\underbracket[0.3pt]{-Z_t}_{\partial_th}\dif t+(T-t)\underbracket[0.3pt]{\dif Z_t}_{\mathclap{\text{drift=0}}}=-Z_t\dif t+\dif B_t.
 \end{equation*}
+Now, 
+\begin{equation*}
+	X_t^{a}=\frac{bt}{T}-\frac{at}{T}+Y_t
+\end{equation*}
