txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -326,3 +326,9 @@ Now,
 \begin{equation*}
 	X_t^{a}=\frac{bt}{T}-\frac{at}{T}+Y_t
 \end{equation*}
+which means 
+\begin{align*}
+	\dif X_t & =\frac{b-a}{T}\dif t+\dif Y?t \\
+	 & =\frac{b-a}{T}\dif t-Z_t\dif t+\dif B_t\\
+	 &=\frac{b-a}{T}\dif t-\frac{X_t^{a}-a\left(1-\frac{t}{T}\right)}{den}
+\end{align*}
