--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -331,5 +331,5 @@ which means
 	\dif X_t & =\frac{b-a}{T}\dif t+\dif Y_t \\
 	 & =\frac{b-a}{T}\dif t-Z_t\dif t+\dif B_t\\
 	 &=\frac{b-a}{T}\dif t-\frac{X_t^{a}-a\left(1-\frac{t}{T}\right)-b\frac{t}{T}}{T-t}\dif t+\dif B_t\\
-	 &=\frac{b-X_t^a}{T-t}\dif t+\dif B_T
+	 &=\frac{b-X_t^a}{T-t}\dif t+\dif B_T.
 \end{align*}
