txs auto checkin

--- a/PSDE/Partial and Stochastic Differential Equations/Third.tex
+++ b/PSDE/Partial and Stochastic Differential Equations/Third.tex
@@ -333,3 +333,8 @@ which means
 	 &=\frac{b-a}{T}\dif t-\frac{X_t^{a}-a\left(1-\frac{t}{T}\right)-b\frac{t}{T}}{T-t}\dif t+\dif B_t\\
 	 &=\frac{b-X_t^a}{T-t}\dif t+\dif B_T.
 \end{align*}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\linewidth]{screenshot002}
+	\label{fig:screenshot002}
+\end{figure}
