txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4118,7 +4118,7 @@ The dominated convergence theorem requires adaptness.
 \end{theorem}
 To prove we should use Borel-cantelli somehow.
 \chapter{Exercises and questions}
-\subsection{Exercises with Prof. Issoglio (2024/2025)}
+\section{Exercises with Prof. Issoglio (2024/2025)}
 \section{Questions for the oral examination}
 Here I will try and answer to the questions that were on the moodle site about the year 2022-2023. I hope that they will be valid for the years to come as well.
 \subsection{Transition kernels: definition, example, and their usage in the extension of measures to
