--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4119,6 +4119,14 @@ The dominated convergence theorem requires adaptness.
 To prove we should use Borel-cantelli somehow.
 \chapter{Exercises and questions}
 \section{Exercises with Prof. Issoglio (2024/2025)}
+\subsection{Exercise class 1}
+\subsection{Exercise class 2}
+\subsection{Exercise class 3}
+\subsection{Exercise class 4}
+\subsection{Exercise class 5}
+\subsection{Exercise class 6}
+\subsection{Exercise class 7}
+\subsection{Exercise class 8}
 \section{Questions for the oral examination}
 Here I will try and answer to the questions that were on the moodle site about the year 2022-2023. I hope that they will be valid for the years to come as well.
 \subsection{Transition kernels: definition, example, and their usage in the extension of measures to
