--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4120,6 +4120,12 @@ To prove we should use Borel-cantelli somehow.
 \chapter{Exercises and questions}
 \section{Exercises with Prof. Issoglio (2024/2025)}
 \subsection{Exercise class 1}
+\begin{exercise}
+	Consider the experiment where we throw a coin infinitely many times, so that 
+	\begin{equation*}
+		\Omega=\{H,T\}^{\N} \qquad\text{(or $\{0,1\}^{\N}$)}.
+	\end{equation*}
+\end{exercise}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
 \subsection{Exercise class 4}
