txs auto checkin

--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4125,6 +4125,7 @@ To prove we should use Borel-cantelli somehow.
 	\begin{equation*}
 		\Omega=\{H,T\}^{\N} \qquad\text{(or $\{0,1\}^{\N}$)}.
 	\end{equation*}
+	In particular, the event $\omega\in\Omega$ is of the form $\omega=()$
 \end{exercise}
 \subsection{Exercise class 2}
 \subsection{Exercise class 3}
