txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -309,7 +309,9 @@
 								}
 								
 								\newcounter{exer}
-								
+\newtcolorbox{exercise}{
+enhanced jigsaw,
+}	
 \newtcolorbox{revise}{
 	enhanced jigsaw,
 	colback=red!5!white,sharp corners, colframe=LightSteelBlue4!75!black,
