txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -413,7 +413,7 @@
 			title={Proof},
 			coltitle=white,
 			fonttitle=\bfseries,
-			colbacktitle=Coral1
+			colbacktitle=SkyBlue1!60
 		}
 	
 	\newtcolorbox{proofbox}{
