txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -353,14 +353,14 @@
 		pattern=custom north east lines,
 		hatchspread=12pt,
 		hatchthickness=4pt,
-		hatchcolor=SkyBlue1,
+		hatchcolor=SkyBlue1!10,
 		]
 		(interior.south east) rectangle (interior.north west);
 	},
 	title={Proof},
 	coltitle=white,
 	fonttitle=\bfseries,
-	colbacktitle=Coral1
+	colbacktitle=SkyBlue1!20
 }
 \newtcolorbox{revise}{
 	enhanced jigsaw,
