txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -357,8 +357,8 @@
 		]
 		(interior.south east) rectangle (interior.north west);
 	},
-	title={Proof},
-	coltitle=white,
+	title={Exercise},
+	coltitle=black,
 	fonttitle=\bfseries,
 	colbacktitle=SkyBlue1!20
 }
