txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -358,7 +358,7 @@ number within=subsection]{
 		]
 		(interior.south east) rectangle (interior.north west);
 	},
-	title={Exercise~\thetcbcounter},
+	title={Exercise},
 	coltitle=black,
 	fonttitle=\bfseries,
 	colbacktitle=SkyBlue1!20
