--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -342,8 +342,7 @@
 	\pgfusepath{stroke}
 }
 
-\newtcolorbox{exercise}[auto counter, 
-number within=subsection]{
+\newtcolorbox{exercise}[number within=subsection]{
 	enhanced standard jigsaw,
 	sharp corners,
 	breakable=true,
@@ -361,8 +360,8 @@ number within=subsection]{
 	title={Exercise},
 	coltitle=black,
 	fonttitle=\bfseries,
-	colbacktitle=SkyBlue1!20
-}
+	colbacktitle=SkyBlue1!20}
+	
 \newtcolorbox{revise}{
 	enhanced jigsaw,
 	colback=red!5!white,sharp corners, colframe=LightSteelBlue4!75!black,
