txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -342,7 +342,7 @@
 	\pgfusepath{stroke}
 }
 
-\newtcolorbox{exercise}[number within=subsection]{
+\newtcolorbox[number within=subsection]{exercise}{
 	enhanced standard jigsaw,
 	sharp corners,
 	breakable=true,
