txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -357,7 +357,7 @@
 		]
 		(interior.south east) rectangle (interior.north west);
 	},
-	title={Exercise},
+	title={Exercise~\thetcbcounter},
 	coltitle=black,
 	fonttitle=\bfseries,
 	colbacktitle=SkyBlue1!20}
