txs auto checkin

--- a/PT/pacco.sty
+++ b/PT/pacco.sty
@@ -342,7 +342,7 @@
 	\pgfusepath{stroke}
 }
 
-\newtcolorbox[number within=subsection]{exercise}{
+\newtcolorbox[auto counter, number within=subsection]{exercise}{
 	enhanced standard jigsaw,
 	sharp corners,
 	breakable=true,
