--- a/PT/probtheory.tex
+++ b/PT/probtheory.tex
@@ -4125,7 +4125,10 @@ To prove we should use Borel-cantelli somehow.
 	\begin{equation*}
 		\Omega=\{H,T\}^{\N} \qquad\text{(or $\{0,1\}^{\N}$)}.
 	\end{equation*}
-	In particular, the event $\omega\in\Omega$ is of the form $\omega=(\omega_1,\omega_2,\ldots)$
+	In particular, the event $\omega\in\Omega$ is of the form $\omega=(\omega_1,\omega_2,\ldots)$ with $\omega_i\in\{0,1\}$. Let 
+	\begin{equation*}
+		C:=\left\{\left\{\omega\in\Omega:\omega_k=a,a\in\{0,1\}\right\}\right\}
+	\end{equation*}
 \end{exercise}
 
 \subsection{Exercise class 2}
